; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/mtk-mdp/extr_mtk_mdp_comp.c_mtk_mdp_comp_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/mtk-mdp/extr_mtk_mdp_comp.c_mtk_mdp_comp_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }
%struct.device = type { i32 }
%struct.device_node = type { i32 }
%struct.mtk_mdp_comp = type { i32, i64, i32*, i32*, i32, i32 }
%struct.platform_device = type { i32 }

@MTK_MDP_COMP_ID_MAX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"Invalid comp_id %d\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@mtk_mdp_matches = common dso_local global %struct.TYPE_2__* null, align 8
@MTK_MDP_RDMA = common dso_local global i64 0, align 8
@MTK_MDP_WDMA = common dso_local global i64 0, align 8
@MTK_MDP_WROT = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [14 x i8] c"mediatek,larb\00", align 1
@.str.2 = private unnamed_addr constant [44 x i8] c"Missing mediadek,larb phandle in %pOF node\0A\00", align 1
@.str.3 = private unnamed_addr constant [30 x i8] c"Waiting for larb device %pOF\0A\00", align 1
@EPROBE_DEFER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mtk_mdp_comp_init(%struct.device* %0, %struct.device_node* %1, %struct.mtk_mdp_comp* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.device*, align 8
  %7 = alloca %struct.device_node*, align 8
  %8 = alloca %struct.mtk_mdp_comp*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.device_node*, align 8
  %11 = alloca %struct.platform_device*, align 8
  %12 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %6, align 8
  store %struct.device_node* %1, %struct.device_node** %7, align 8
  store %struct.mtk_mdp_comp* %2, %struct.mtk_mdp_comp** %8, align 8
  store i32 %3, i32* %9, align 4
  %13 = load i32, i32* %9, align 4
  %14 = icmp ult i32 %13, 0
  br i1 %14, label %19, label %15

15:                                               ; preds = %4
  %16 = load i32, i32* %9, align 4
  %17 = load i32, i32* @MTK_MDP_COMP_ID_MAX, align 4
  %18 = icmp uge i32 %16, %17
  br i1 %18, label %19, label %25

19:                                               ; preds = %15, %4
  %20 = load %struct.device*, %struct.device** %6, align 8
  %21 = load i32, i32* %9, align 4
  %22 = call i32 @dev_err(%struct.device* %20, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %21)
  %23 = load i32, i32* @EINVAL, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %5, align 4
  br label %125

25:                                               ; preds = %15
  %26 = load %struct.device_node*, %struct.device_node** %7, align 8
  %27 = call i32 @of_node_get(%struct.device_node* %26)
  %28 = load %struct.mtk_mdp_comp*, %struct.mtk_mdp_comp** %8, align 8
  %29 = getelementptr inbounds %struct.mtk_mdp_comp, %struct.mtk_mdp_comp* %28, i32 0, i32 5
  store i32 %27, i32* %29, align 4
  %30 = load i32, i32* %9, align 4
  %31 = load %struct.mtk_mdp_comp*, %struct.mtk_mdp_comp** %8, align 8
  %32 = getelementptr inbounds %struct.mtk_mdp_comp, %struct.mtk_mdp_comp* %31, i32 0, i32 0
  store i32 %30, i32* %32, align 8
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** @mtk_mdp_matches, align 8
  %34 = load i32, i32* %9, align 4
  %35 = zext i32 %34 to i64
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i64 %35
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = load %struct.mtk_mdp_comp*, %struct.mtk_mdp_comp** %8, align 8
  %40 = getelementptr inbounds %struct.mtk_mdp_comp, %struct.mtk_mdp_comp* %39, i32 0, i32 1
  store i64 %38, i64* %40, align 8
  %41 = load %struct.device_node*, %struct.device_node** %7, align 8
  %42 = call i32 @of_iomap(%struct.device_node* %41, i32 0)
  %43 = load %struct.mtk_mdp_comp*, %struct.mtk_mdp_comp** %8, align 8
  %44 = getelementptr inbounds %struct.mtk_mdp_comp, %struct.mtk_mdp_comp* %43, i32 0, i32 4
  store i32 %42, i32* %44, align 8
  store i32 0, i32* %12, align 4
  br label %45

45:                                               ; preds = %69, %25
  %46 = load i32, i32* %12, align 4
  %47 = load %struct.mtk_mdp_comp*, %struct.mtk_mdp_comp** %8, align 8
  %48 = getelementptr inbounds %struct.mtk_mdp_comp, %struct.mtk_mdp_comp* %47, i32 0, i32 3
  %49 = load i32*, i32** %48, align 8
  %50 = call i32 @ARRAY_SIZE(i32* %49)
  %51 = icmp slt i32 %46, %50
  br i1 %51, label %52, label %72

52:                                               ; preds = %45
  %53 = load %struct.device_node*, %struct.device_node** %7, align 8
  %54 = load i32, i32* %12, align 4
  %55 = call i32 @of_clk_get(%struct.device_node* %53, i32 %54)
  %56 = load %struct.mtk_mdp_comp*, %struct.mtk_mdp_comp** %8, align 8
  %57 = getelementptr inbounds %struct.mtk_mdp_comp, %struct.mtk_mdp_comp* %56, i32 0, i32 3
  %58 = load i32*, i32** %57, align 8
  %59 = load i32, i32* %12, align 4
  %60 = sext i32 %59 to i64
  %61 = getelementptr inbounds i32, i32* %58, i64 %60
  store i32 %55, i32* %61, align 4
  %62 = load %struct.mtk_mdp_comp*, %struct.mtk_mdp_comp** %8, align 8
  %63 = getelementptr inbounds %struct.mtk_mdp_comp, %struct.mtk_mdp_comp* %62, i32 0, i32 1
  %64 = load i64, i64* %63, align 8
  %65 = load i64, i64* @MTK_MDP_RDMA, align 8
  %66 = icmp ne i64 %64, %65
  br i1 %66, label %67, label %68

67:                                               ; preds = %52
  br label %72

68:                                               ; preds = %52
  br label %69

69:                                               ; preds = %68
  %70 = load i32, i32* %12, align 4
  %71 = add nsw i32 %70, 1
  store i32 %71, i32* %12, align 4
  br label %45

72:                                               ; preds = %67, %45
  %73 = load %struct.mtk_mdp_comp*, %struct.mtk_mdp_comp** %8, align 8
  %74 = getelementptr inbounds %struct.mtk_mdp_comp, %struct.mtk_mdp_comp* %73, i32 0, i32 2
  store i32* null, i32** %74, align 8
  %75 = load %struct.mtk_mdp_comp*, %struct.mtk_mdp_comp** %8, align 8
  %76 = getelementptr inbounds %struct.mtk_mdp_comp, %struct.mtk_mdp_comp* %75, i32 0, i32 1
  %77 = load i64, i64* %76, align 8
  %78 = load i64, i64* @MTK_MDP_RDMA, align 8
  %79 = icmp ne i64 %77, %78
  br i1 %79, label %80, label %93

80:                                               ; preds = %72
  %81 = load %struct.mtk_mdp_comp*, %struct.mtk_mdp_comp** %8, align 8
  %82 = getelementptr inbounds %struct.mtk_mdp_comp, %struct.mtk_mdp_comp* %81, i32 0, i32 1
  %83 = load i64, i64* %82, align 8
  %84 = load i64, i64* @MTK_MDP_WDMA, align 8
  %85 = icmp ne i64 %83, %84
  br i1 %85, label %86, label %93

86:                                               ; preds = %80
  %87 = load %struct.mtk_mdp_comp*, %struct.mtk_mdp_comp** %8, align 8
  %88 = getelementptr inbounds %struct.mtk_mdp_comp, %struct.mtk_mdp_comp* %87, i32 0, i32 1
  %89 = load i64, i64* %88, align 8
  %90 = load i64, i64* @MTK_MDP_WROT, align 8
  %91 = icmp ne i64 %89, %90
  br i1 %91, label %92, label %93

92:                                               ; preds = %86
  store i32 0, i32* %5, align 4
  br label %125

93:                                               ; preds = %86, %80, %72
  %94 = load %struct.device_node*, %struct.device_node** %7, align 8
  %95 = call %struct.device_node* @of_parse_phandle(%struct.device_node* %94, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i32 0)
  store %struct.device_node* %95, %struct.device_node** %10, align 8
  %96 = load %struct.device_node*, %struct.device_node** %10, align 8
  %97 = icmp ne %struct.device_node* %96, null
  br i1 %97, label %105, label %98

98:                                               ; preds = %93
  %99 = load %struct.device*, %struct.device** %6, align 8
  %100 = load %struct.device_node*, %struct.device_node** %7, align 8
  %101 = ptrtoint %struct.device_node* %100 to i32
  %102 = call i32 @dev_err(%struct.device* %99, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.2, i64 0, i64 0), i32 %101)
  %103 = load i32, i32* @EINVAL, align 4
  %104 = sub nsw i32 0, %103
  store i32 %104, i32* %5, align 4
  br label %125

105:                                              ; preds = %93
  %106 = load %struct.device_node*, %struct.device_node** %10, align 8
  %107 = call %struct.platform_device* @of_find_device_by_node(%struct.device_node* %106)
  store %struct.platform_device* %107, %struct.platform_device** %11, align 8
  %108 = load %struct.platform_device*, %struct.platform_device** %11, align 8
  %109 = icmp ne %struct.platform_device* %108, null
  br i1 %109, label %118, label %110

110:                                              ; preds = %105
  %111 = load %struct.device*, %struct.device** %6, align 8
  %112 = load %struct.device_node*, %struct.device_node** %10, align 8
  %113 = call i32 @dev_warn(%struct.device* %111, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.3, i64 0, i64 0), %struct.device_node* %112)
  %114 = load %struct.device_node*, %struct.device_node** %10, align 8
  %115 = call i32 @of_node_put(%struct.device_node* %114)
  %116 = load i32, i32* @EPROBE_DEFER, align 4
  %117 = sub nsw i32 0, %116
  store i32 %117, i32* %5, align 4
  br label %125

118:                                              ; preds = %105
  %119 = load %struct.device_node*, %struct.device_node** %10, align 8
  %120 = call i32 @of_node_put(%struct.device_node* %119)
  %121 = load %struct.platform_device*, %struct.platform_device** %11, align 8
  %122 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %121, i32 0, i32 0
  %123 = load %struct.mtk_mdp_comp*, %struct.mtk_mdp_comp** %8, align 8
  %124 = getelementptr inbounds %struct.mtk_mdp_comp, %struct.mtk_mdp_comp* %123, i32 0, i32 2
  store i32* %122, i32** %124, align 8
  store i32 0, i32* %5, align 4
  br label %125

125:                                              ; preds = %118, %110, %98, %92, %19
  %126 = load i32, i32* %5, align 4
  ret i32 %126
}

declare dso_local i32 @dev_err(%struct.device*, i8*, i32) #1

declare dso_local i32 @of_node_get(%struct.device_node*) #1

declare dso_local i32 @of_iomap(%struct.device_node*, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32*) #1

declare dso_local i32 @of_clk_get(%struct.device_node*, i32) #1

declare dso_local %struct.device_node* @of_parse_phandle(%struct.device_node*, i8*, i32) #1

declare dso_local %struct.platform_device* @of_find_device_by_node(%struct.device_node*) #1

declare dso_local i32 @dev_warn(%struct.device*, i8*, %struct.device_node*) #1

declare dso_local i32 @of_node_put(%struct.device_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
